plain-k8s/canary/simple/deployment-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-app
  labels:
    app: green-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-app
  template:
    metadata:
      labels:
        app: green-app
        group: canary-simple
    spec:
      containers:
        - name: green-app
          image: argoproj/rollouts-demo:green
          readinessProbe: 
            httpGet:
              path: /color
              port: http
            timeoutSeconds: 5
            periodSeconds: 10
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
