plain-k8s/canary/simple/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary-simple
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: canary-simple
          servicePort: http
